# VS_Code_Exercise

./: README.md  flash_test.py  git.ignore  hello_world.ipynb  setup.cfg
src/flashcardpkg/: simpleflashcardpkg.py
