[metadata]
name = simpleflashcardpkg-digontobarua1220
version = 0.0.1
author = Digonto Barua
author_email = digontobarua1220@gmail.com
description = This is a simple package that you can use to create, edit, and quiz yourself on flashcards.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/digontobarua1220/simpleflashcardpkg
project_urls =
    Bug Tracker = https://github.com/digontobarua1220/simpleflashcardpkg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src